cmake_minimum_required(VERSION 3.7)
project(timicoin_tryout)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/build.h
        build/moc_aboutdialog.cpp
        build/moc_addressbookpage.cpp
        build/moc_addresstablemodel.cpp
        build/moc_askpassphrasedialog.cpp
        build/moc_bitcoinaddressvalidator.cpp
        build/moc_bitcoinamountfield.cpp
        build/moc_bitcoingui.cpp
        build/moc_bitcoinunits.cpp
        build/moc_clientmodel.cpp
        build/moc_coincontroldialog.cpp
        build/moc_coincontroltreewidget.cpp
        build/moc_csvmodelwriter.cpp
        build/moc_editaddressdialog.cpp
        build/moc_guiutil.cpp
        build/moc_macdockiconhandler.cpp
        build/moc_macnotificationhandler.cpp
        build/moc_monitoreddatamapper.cpp
        build/moc_notificator.cpp
        build/moc_optionsdialog.cpp
        build/moc_optionsmodel.cpp
        build/moc_overviewpage.cpp
        build/moc_paymentserver.cpp
        build/moc_qvalidatedlineedit.cpp
        build/moc_qvaluecombobox.cpp
        build/moc_rpcconsole.cpp
        build/moc_sendcoinsdialog.cpp
        build/moc_sendcoinsentry.cpp
        build/moc_signverifymessagedialog.cpp
        build/moc_splashscreen.cpp
        build/moc_transactiondesc.cpp
        build/moc_transactiondescdialog.cpp
        build/moc_transactionfilterproxy.cpp
        build/moc_transactiontablemodel.cpp
        build/moc_transactionview.cpp
        build/moc_walletframe.cpp
        build/moc_walletmodel.cpp
        build/moc_walletstack.cpp
        build/moc_walletview.cpp
        build/ui_aboutdialog.h
        build/ui_addressbookpage.h
        build/ui_askpassphrasedialog.h
        build/ui_coincontroldialog.h
        build/ui_editaddressdialog.h
        build/ui_optionsdialog.h
        build/ui_overviewpage.h
        build/ui_rpcconsole.h
        build/ui_sendcoinsdialog.h
        build/ui_sendcoinsentry.h
        build/ui_signverifymessagedialog.h
        build/ui_transactiondescdialog.h
        doc/assets-attribution.txt
        doc/bitcoin_logo_doxygen.png
        doc/build-msw.md
        doc/build-osx.md
        doc/build-unix.md
        doc/coding.md
        doc/Doxyfile
        doc/files.txt
        doc/multiwallet-qt.md
        doc/readme-qt.rst
        doc/README.md
        doc/README_windows.txt
        doc/release-notes.md
        doc/release-process.md
        doc/Tor.txt
        doc/translation_process.md
        doc/unit-tests.md
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/cpp_standard_headers_indexer.cpp
        src/json/json_spirit.h
        src/json/json_spirit_error_position.h
        src/json/json_spirit_reader.cpp
        src/json/json_spirit_reader.h
        src/json/json_spirit_reader_template.h
        src/json/json_spirit_stream_reader.h
        src/json/json_spirit_utils.h
        src/json/json_spirit_value.cpp
        src/json/json_spirit_value.h
        src/json/json_spirit_writer.cpp
        src/json/json_spirit_writer.h
        src/json/json_spirit_writer_template.h
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldb_main.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/port/win/stdint.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_win.cc
        src/leveldb/port/port_win.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/aboutdialog.cpp
        src/qt/aboutdialog.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bitcoin.cpp
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/macdockiconhandler.h
        src/qt/macnotificationhandler.h
        src/qt/monitoreddatamapper.cpp
        src/qt/monitoreddatamapper.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/qrcodedialog.cpp
        src/qt/qrcodedialog.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletstack.cpp
        src/qt/walletstack.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/test/accounting_tests.cpp
        src/test/alert_tests.cpp
        src/test/allocator_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bignum_tests.cpp
        src/test/bloom_tests.cpp
        src/test/canonical_tests.cpp
        src/test/checkblock_tests.cpp
        src/test/Checkpoints_tests.cpp
        src/test/compress_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/key_tests.cpp
        src/test/miner_tests.cpp
        src/test/mruset_tests.cpp
        src/test/multisig_tests.cpp
        src/test/netbase_tests.cpp
        src/test/pmt_tests.cpp
        src/test/rpc_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/scrypt_tests.cpp
        src/test/serialize_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/test_bitcoin.cpp
        src/test/transaction_tests.cpp
        src/test/uint160_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/wallet_tests.cpp
        src/addrman.cpp
        src/addrman.h
        src/alert.cpp
        src/alert.h
        src/allocators.h
        src/base58.h
        src/bignum.h
        src/bitcoinrpc.cpp
        src/bitcoinrpc.h
        src/bloom.cpp
        src/bloom.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.h
        src/coincontrol.h
        src/compat.h
        src/crypter.cpp
        src/crypter.h
        src/db.cpp
        src/db.h
        src/hash.cpp
        src/hash.h
        src/init.cpp
        src/init.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/leveldb.cpp
        src/leveldb.h
        src/limitedmap.h
        src/main.cpp
        src/main.h
        src/mruset.h
        src/net.cpp
        src/net.h
        src/netbase.cpp
        src/netbase.h
        src/noui.cpp
        src/protocol.cpp
        src/protocol.h
        src/rpcblockchain.cpp
        src/rpcdump.cpp
        src/rpcmining.cpp
        src/rpcnet.cpp
        src/rpcrawtransaction.cpp
        src/rpcwallet.cpp
        src/script.cpp
        src/script.h
        src/scrypt-sse2.cpp
        src/scrypt.cpp
        src/scrypt.h
        src/serialize.h
        src/sync.cpp
        src/sync.h
        src/threadsafety.h
        src/txdb.cpp
        src/txdb.h
        src/ui_interface.h
        src/uint256.h
        src/util.cpp
        src/util.h
        src/version.cpp
        src/version.h
        src/wallet.cpp
        src/wallet.h
        src/walletdb.cpp
        src/walletdb.h
        qrc_bitcoin.cpp)

add_executable(timicoin_tryout ${SOURCE_FILES})